--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap');
+body, html {
+  height: 100vh;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Racing Sans One', cursive;
+  font-size:xx-large;
+  color: #777;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bgimg-1 {
+  position: relative;
+  
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
+.bgimg-1 {
+  background-image: url("/src/assets/images/nascar.jpg");
+  height: 100vh;
+}
+
+.caption {
+  background-color: rgba(238, 226, 226, 0.65);
+  position: absolute;
+  left: 0;
+  top: 30vh;
+  width: 100vw;
+  text-align: center;
+ color: black;
+}
+
+
+
+
+
+
